@@ -4,6 +4,7 @@ import java.util.Random;
 
 import got.client.sound.GOTBiomeMusic;
 import got.client.sound.GOTBiomeMusic.MusicRegion;
+import got.common.database.GOTRegistry;
 import got.common.world.biome.GOTBiome;
 import got.common.world.biome.variant.GOTBiomeVariant;
 import got.common.world.feature.*;
@@ -39,6 +40,10 @@ public class GOTBiomeEssos extends GOTBiome {
 		decorator.doubleFlowersPerChunk = 1;
 		decorator.cactiPerChunk = 1;
 		decorator.cornPerChunk = 4;
+		if (!disableNoise()) {
+			decorator.clayGen = new GOTWorldGenSand(GOTRegistry.redClay, 5, 1);
+			decorator.addSoil(new WorldGenMinable(GOTRegistry.redClay, 32, Blocks.dirt), 40.0f, 0, 80);
+		}
 		decorator.addTree(GOTTreeType.ACACIA, 300);
 		decorator.addTree(GOTTreeType.ACACIA_DEAD, 1);
 		decorator.addTree(GOTTreeType.ALMOND, 5);
