@@ -2,19 +2,11 @@ package got.common.world.biome.westeros;
 
 import got.client.sound.GOTBiomeMusic;
 import got.client.sound.GOTBiomeMusic.MusicRegion;
-import got.common.database.GOTRegistry;
-import net.minecraft.init.Blocks;
-import net.minecraft.world.gen.feature.WorldGenMinable;
 
 public class GOTBiomeIronbornHills extends GOTBiomeIronborn {
 	public GOTBiomeIronbornHills(int i, boolean major) {
 		super(i, major);
-		decorator.clearOres();
-		decorator.addOre(new WorldGenMinable(Blocks.iron_ore, 8), 8.0f, 0, 255);
-		decorator.addOre(new WorldGenMinable(GOTRegistry.oreTin, 8), 8.0f, 0, 255);
-		decorator.addOre(new WorldGenMinable(GOTRegistry.oreCopper, 8), 8.0f, 0, 255);
-		decorator.addOre(new WorldGenMinable(GOTRegistry.oreCobalt, 5), 5.0f, 0, 32);
-		decorator.addOre(new WorldGenMinable(GOTRegistry.oreGlowstone, 4), 8.0f, 0, 48);
+		decorator.biomeOreFactor = 2.0f;
 	}
 
 	@Override
